Ensure potentially linked but disabled resources can be bundled

BUG: 445408
(cherry picked from commit 81c04fcbecfb0bdbd196e56831e7d089160e24fb)